Changed repo ownership

--- a/contributors.html
+++ b/contributors.html
@@ -765,7 +765,7 @@
             <ul>
               <li>
                 <a
-                  href="https://github.com/itsAnimation/AnimateItNow"
+                  href="https://github.com/AnujShrivastava01/AnimateItNow"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><i class="fab fa-github"></i> GitHub</a
@@ -804,7 +804,7 @@
     <script src="script.js"></script>
     <script>
       // Contributors data
-      const owner = "itsAnimation";
+      const owner = "AnujShrivastava01";
       const repo = "AnimateItNow";
       let contributorsData = [];
       let filteredContributors = [];
