--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1998,7 +1998,7 @@
                 <div class="footer-right">
                     <h4>Connect With Us</h4>
                     <ul>
-                        <li><a href="https://github.com/itsAnimation/AnimateItNow" target="_blank"
+                        <li><a href="https://github.com/AnujShrivastava01/AnimateItNow" target="_blank"
                                 rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a></li>
                         <li><a href="https://www.linkedin.com/in/anujshrivastava1/" target="_blank"
                                 rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
@@ -2018,7 +2018,7 @@
 
     <script>
     // Final, Corrected Leaderboard Script with Caching
-    const owner = "itsAnimation";
+    const owner = "AnujShrivastava01";
     const repo = "AnimateItNow";
     const pointsPerLevel = {
         "level1": 3, "level2": 7, "level3": 10, "good first issue": 2, "bug": 5,
