fiexed the input text problem

--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,6 @@
             margin-bottom: 15px;
             background: linear-gradient(to right, var(--primary), var(--accent));
             background-clip: text;
-            background-clip: text;
-            background-clip: text;
-            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -636,12 +633,13 @@
         .footer-left h2 {
             margin-bottom: 15px;
             background: linear-gradient(to right, var(--primary), var(--accent));
+        .footer-left h2 {
+            margin-bottom: 15px;
+            background: linear-gradient(to right, var(--primary), var(--accent));
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-
-        .footer-right h4 {
-            margin-bottom: 20px;
         }
 
         .footer-right ul {
