--- a/contact.html
+++ b/contact.html
@@ -177,10 +177,10 @@
       /* Main Contact Section - Improved Layout */
       .contact-main {
         position: relative;
-        padding: 60px 20px;
+        padding: 55px 20px;
         max-width: 1200px;
         margin: 0 auto;
-        
+        z-index: 1;
       }
       
       .contact-container {
