--- a/contact.html
+++ b/contact.html
@@ -180,6 +180,7 @@
         padding: 55px 20px;
         max-width: 1200px;
         margin: 0 auto;
+        z-index: 1;
       }
       
       .contact-container {
